@startuml
'https://plantuml.com/class-diagram

title US14's Class Diagram

enum EmployeeType {
    + NURSE : int
    + RECEPTIONIST : int
}
class Employee {
    - type : EmployeeType
    - employee_id : static int
    - name : string
    - phone_number : int
    - email : string
    - zip_code : string
    ---
    + setType(EmployeeType type) : void
    + setID(int id) : void
    + setName(string name) : void
    + setPhoneNumber(string phone_number) : void
    + setEmail(string email) : void
    + setZipCode(string zip_code) : void
}
class EmployeeContainer {
    - employees : list<Employee>
    ---
    + add(Employee employee) : void
}
class RegisterEmployeeView {
    + getEmployeeType()
    + getEmployeeInfo()
}
class RegisterEmployeeController {
    + registerEmployee(EmployeeType type, string name, int phone_number, string email, string zip_code) : void
}

RegisterEmployeeView ..> RegisterEmployeeController
RegisterEmployeeController "1" -- "1" EmployeeContainer
Employee "*" -- "1   "  EmployeeType: has a type of >
Employee "                               *" <-- "1" EmployeeContainer: < stores the information of



@enduml